# ocr_recorder

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_cn.md
src/: basic_funcs_for_ocr_recorder.hpp  dll_ocr_recorder.cpp  dll_ocr_recorder.lua  help_doc.ahk  ocr_recorder.ahk  ocr_recorder.lua  ocr_recorder.patterns.config  ocr_recorder.words.config  ocr_recorder_v1.1.ahk  ocr_tesser.config  region_selector_dll.cpp  region_selector_dll.hpp  setting_hotkey.ahk  setting_page.ahk  test_dll_ocr_recorder.cpp  test_dll_ocr_recorder.lua
